--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,12 +16,11 @@ builds:
       - amd64
       - arm64
 archives:
-  - name_template: "{{ .ProjectName }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}"
-    format_overrides:
-      - goos: windows
-        format: zip
+  - format_overrides:
+    - goos: windows
+      format: zip
 snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+  name_template: "v{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
